Fix overflow issue on mobile devices

--- a/src/ochre-ivy/src/style.css
+++ b/src/ochre-ivy/src/style.css
@@ -6,6 +6,14 @@
 }
 
 /*Globals*/
+.hide-overflow {
+  width: 100vw;
+  overflow-x: hidden;
+}
+.hide-overflow > * {
+  box-sizing: border-box;
+}
+
 button {
   text-decoration: none;
 }
@@ -30,14 +38,12 @@ button {
   color: var(--light);
 }
 /* ///// */
-
 body {
   margin: 0rem;
   background-color: var(--light);
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-x: hidden;
 }
   body.dark-mode {
   background-color: var(--dark);
